--- a/client/src/locales/en/messages.json
+++ b/client/src/locales/en/messages.json
@@ -4,6 +4,7 @@
   "Email": "Email",
   "First name": "First name",
   "Last name": "Last name",
+  "No token": "No token",
   "Not subscribed": "Not subscribed",
   "Password": "Password",
   "Password confirmation": "Password confirmation",
