--- a/client/src/locales/ru/messages.json
+++ b/client/src/locales/ru/messages.json
@@ -4,6 +4,7 @@
   "Email": "Email",
   "First name": "Имя",
   "Last name": "Фамилия",
+  "No token": "Нет токена",
   "Not subscribed": "Без подписки",
   "Password": "Пароль",
   "Password confirmation": "Подтверждение пароля",
