created review panel on frontend

--- a/client/src/locales/ru/messages.json
+++ b/client/src/locales/ru/messages.json
@@ -13,6 +13,7 @@
   "Password confirmation": "Подтверждение пароля",
   "Passwords do not match": "Пароли не совпадают",
   "Phone": "Телефон",
+  "Send": "Отправить",
   "Select Author...": "Выберите автора...",
   "Select Genre...": "Выберите жанр...",
   "Sign In": "Войти",
