--- a/client/src/locales/en/messages.json
+++ b/client/src/locales/en/messages.json
@@ -14,6 +14,7 @@
   "Password confirmation": "Password confirmation",
   "Passwords do not match": "Passwords do not match",
   "Phone": "Phone",
+  "Send": "Send",
   "Select Author...": "Select Author...",
   "Select Genre...": "Select Genre...",
   "Sign In": "Sign In",
