--- a/client/src/locales/en/messages.json
+++ b/client/src/locales/en/messages.json
@@ -1,6 +1,10 @@
 {
   "Add track": "Add track",
+  "Admins": "Admins",
+  "All": "All",
   "Author": "Author",
+  "Authors": "Authors",
+  "Cancel": "Cancel",
   "Change password": "Change password",
   "Change photo": "Change photo",
   "Email": "Email",
@@ -9,20 +13,30 @@
   "Hint from track": "Hint from track",
   "Hint from track file": "Hint from track file",
   "Last name": "Last name",
+  "Leave a reply": "Leave a reply",
+  "Make Admin": "Make Admin",
+  "Make User": "Make User",
   "Not subscribed": "Not subscribed",
   "Password": "Password",
   "Password confirmation": "Password confirmation",
   "Passwords do not match": "Passwords do not match",
+  "Pay": "Pay",
   "Phone": "Phone",
-  "Send": "Send",
+  "Regular": "Regular",
   "Select Author...": "Select Author...",
   "Select Genre...": "Select Genre...",
+  "Send": "Send",
   "Sign In": "Sign In",
   "Sign Out": "Sign Out",
   "Sign Up": "Sign Up",
+  "Smart Volume Contol:": "Smart Volume Contol:",
   "Subscribed": "Subscribed",
+  "Subscription": "Subscription",
   "Successfully updated your profile, {0} {1}": "Successfully updated your profile, {0} {1}",
+  "Text...": "Text...",
+  "Theme...": "Theme...",
   "Track name": "Track name",
+  "Tracks": "Tracks",
   "Upload file...": "Upload file...",
   "Welcome, {0} {1}": "Welcome, {0} {1}"
 }
