--- a/client/src/locales/ru/messages.json
+++ b/client/src/locales/ru/messages.json
@@ -1,6 +1,10 @@
 {
   "Add track": "Добавить трек",
+  "Admins": "Администраторы",
+  "All": "Все",
   "Author": "Автор",
+  "Authors": "Авторы",
+  "Cancel": "Отменить",
   "Change password": "Изменить пароль",
   "Change photo": "Изменить фотографию",
   "Email": "Email",
@@ -8,20 +12,30 @@
   "Genre": "Жанр",
   "Hint from track file": "Подсказка из файла трека",
   "Last name": "Фамилия",
+  "Leave a reply": "Оставить отзыв",
+  "Make Admin": "Сделать администратором",
+  "Make User": "Сделать пользователем",
   "Not subscribed": "Без подписки",
   "Password": "Пароль",
   "Password confirmation": "Подтверждение пароля",
   "Passwords do not match": "Пароли не совпадают",
+  "Pay": "Оплатить",
   "Phone": "Телефон",
-  "Send": "Отправить",
+  "Regular": "Пользователи",
   "Select Author...": "Выберите автора...",
   "Select Genre...": "Выберите жанр...",
+  "Send": "Отправить",
   "Sign In": "Войти",
   "Sign Out": "Выйти",
   "Sign Up": "Зарегистрироваться",
+  "Smart Volume Contol:": "Умное управление звуком",
   "Subscribed": "Подписка оформлена",
+  "Subscription": "Подписка",
   "Successfully updated your profile, {0} {1}": "{0} {1}, ваш профиль изменён",
+  "Text...": "Текст...",
+  "Theme...": "Тема...",
   "Track name": "Название трека",
+  "Tracks": "Треки",
   "Upload file...": "Выберите файл...",
   "Welcome, {0} {1}": "Добро пожаловать, {0} {1}"
 }
